--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ISports</string>
+    <string name="main_fragment_default">Main Fragment</string>
+    <string name="loginButton_Text">Login</string>
+    <string name="cadastro_fragment_default">Cadastro Fragment</string>
 </resources>
