--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="login_cadastro_label">Ainda não tem conta? Cadastre-se</string>
     <string name="signup_email_hint">E-mail</string>
     <string name="signup_confirm_password_hint">Confirm Password</string>
-    <string name="signupbuttom_text">Sign Up</string>
+    <string name="signupbuttom_text">Cadastre-se</string>
     <string name="historico_string">Histórico</string>
     <string name="match_not_found">Nenhum jogo foi encontrado!</string>
     <string name="dis_text">Distância</string>
