Possibilidade do usuário alterar o cadastro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="data_text">Data</string>
     <string name="hour_text">Hora</string>
     <string name="novo_jogo_button_text">Novo Jogo</string>
+    <string name="alterar_cadastro_text">Alterar cadastro</string>
 </resources>
