--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="time_jogo">time_jogo</string>
     <string name="endereco_jogo">endereco_jogo</string>
     <string name="modalidade_icone">modalidade_icone</string>
+    <string name="login_email_hint">Email</string>
 </resources>
