--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="action_save_description">Salvar novo jogo</string>
     <string name="action_save_title">Novo jogo</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fab_participar_text">PARTICIPAR</string>
 </resources>
