Adicionado remoção de usuário de partida

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="fim">fim</string>
     <string name="local">local</string>
     <string name="participantes">Participantes</string>
+    <string name="text_sair">SAIR</string>
 </resources>
